# python-django-post-api

./: .gitignore  .pre-commit-config.yaml  README.md  openapi-scehma.yml  pyproject.toml  requirements.txt
config/: settings.py  urls.py
posts/: permissions.py  serializers.py  tests.py  urls.py  views.py
posts/migrations/: 0001_initial.py
